Bug 1386514 - Implement Responsive Web Design to make `.pane-container` element's width as 530px to 664px and make category and question mark icons align center when window's width is smaller than 830px. r=jaws
MozReview-Commit-ID: Bf69OW3xaxY

UltraBlame original commit: 67ad8661e46d68e38468a327ef65fd230dced20b

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -5527,7 +5527,7 @@ max
 -
 width
 :
-960px
+830px
 )
 {
 #
@@ -5554,6 +5554,27 @@ none
 ;
 }
 .
+category
+{
+padding
+-
+inline
+-
+start
+:
+47px
+;
+/
+*
+make
+category
+icons
+align
+center
+*
+/
+}
+.
 help
 -
 button
@@ -5565,6 +5586,77 @@ size
 0
 !
 important
+;
+margin
+-
+inline
+-
+start
+:
+51px
+!
+important
+;
+/
+*
+make
+the
+question
+mark
+icon
+align
+center
+*
+/
+background
+-
+position
+:
+0px
+!
+important
+;
+padding
+-
+inline
+-
+start
+:
+0px
+!
+important
+;
+}
+.
+main
+-
+content
+{
+padding
+-
+left
+:
+0
+;
+padding
+-
+right
+:
+0
+;
+}
+.
+pane
+-
+container
+{
+margin
+-
+inline
+-
+end
+:
+10px
 ;
 }
 }
